<resources>
    <string name="app_name">My Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ContactName">Omkar Anil Pendkalkar</string>
    <string name="NumType">Mobile</string>
    <string name="contactImg">op</string>
    <string name="full_name">Full Name:</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone_no">Phone No</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="close">close</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="save_edit">Save Edit</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_contact">Are you sure you want to delete this contact?</string>
</resources>