<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/dimgrey"
        android:elevation="@dimen/_7sdp">
        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/close"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/close"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:gravity="center"
                android:backgroundTint="@color/primary"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/_14ssp"/>
        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/account"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_full_name"
        android:padding="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:inputType="textCapSentences" />
    <EditText
        android:id="@+id/editTextPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_phone_no"
        android:padding="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:inputType="phone" />
    <Spinner
        android:id="@+id/noTypeSpinner"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_30sdp"
        android:textAlignment="center"
        android:padding="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/custom_input"/>
</LinearLayout>