<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@color/dimgrey"
        android:elevation="@dimen/_10sdp"
        android:layout_height="@dimen/_40sdp">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/close"
            android:src="@drawable/arrow_back"
            android:background="@android:color/transparent"/>
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_10sdp">
        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit"
            android:background="@android:color/transparent"/>
        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete"
            android:background="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            app:cardCornerRadius="@dimen/_50sdp"
            android:textAlignment="center"
            android:elevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp">
        <TextView
            android:id="@+id/contactImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/contactImg"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:textSize="@dimen/_40ssp"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

        <TextView
            android:id="@+id/txtviewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_input"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/account" />
        <TextView
            android:id="@+id/txtviewNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_input"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/phone" />
</LinearLayout>