<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/_2sdp"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:background="@drawable/bg_card">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@android:color/transparent"
            app:cardCornerRadius="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:elevation="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp">
        <TextView
            android:id="@+id/contactImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contactImg"
            android:elevation="@dimen/_50sdp"
            android:textAllCaps="true"
            android:background="@color/primary"
            android:textStyle="bold"
            android:textColor="@color/dull_white"
            android:gravity="center"
            android:textSize="@dimen/_19ssp"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/ContactName"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/numType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/NumType"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
        <TextView
            android:id="@+id/contactId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NumType"
            android:visibility="gone"
            android:gravity="center|top"
            android:textSize="@dimen/_10ssp"/>
        <TextView
            android:id="@+id/hexColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center|top"
            android:textSize="@dimen/_10ssp"/>
    </LinearLayout>
</LinearLayout>